登録品削除機能の実装

--- a/app/views/expendables/new.html.erb
+++ b/app/views/expendables/new.html.erb
@@ -35,7 +35,7 @@
           消耗品の説明
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_area :content, class:"items-text", id:"item-info", placeholder:"消耗品の説明" ,rows:"7" ,maxlength:"100" %>
+        <%= f.text_area :content, class:"items-text", id:"item-info", placeholder:"商品の説明 (任意 100文字まで)" ,rows:"7" ,maxlength:"100" %>
       </div>
             <div class="weight-bold-text">
         消費期間
