消耗期間表示及び更新機能の実装

--- a/app/views/expendables/edit.html.erb
+++ b/app/views/expendables/edit.html.erb
@@ -52,7 +52,7 @@ app/assets/stylesheets/items/new.css %>
  
       <div class="sell-btn-contents">
         <%= f.submit "変更する" ,class:"sell-btn" %>
-        <%=link_to 'もどる', expendable_path(@expendable.user_id), class:"back-btn" %>
+        <%=link_to 'もどる', expendable_path(@expendable.id), class:"back-btn" %>
       </div>
       <%# /下部ボタン %>
     </div>
