--- a/app/assets/stylesheets/expendables/index.scss
+++ b/app/assets/stylesheets/expendables/index.scss
@@ -137,4 +137,15 @@ a {
   font-size: 2vh;
 }
 
+.index_item-red-btn {
+
+  text-align: center;
+  background-color: #ea352d;
+  font-size: 20px;
+  font-weight: bold;
+  color: #FFF;
+  margin: 20px 0px;
+  padding: 2vh 3vw;
+}
+
 /* //商品一覧 */
