--- a/app/views/expendables/new.html.erb
+++ b/app/views/expendables/new.html.erb
@@ -41,7 +41,7 @@
         消費期間
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :period, class:"items-text", id:"item-name", placeholder:"20200202（必須 40文字まで)", maxlength:"40" %>
+      <%= f.text_area :period, class:"items-text", id:"item-name", placeholder:"20（必須 半角数字 40文字まで)", maxlength:"40" %>
     </div>
     <%# /商品名と商品説明 %>
 
