--- a/app/views/favorites/edit.html.erb
+++ b/app/views/favorites/edit.html.erb
@@ -52,7 +52,7 @@ app/assets/stylesheets/items/new.css %>
  
       <div class="sell-btn-contents">
         <%= f.submit "変更する" ,class:"sell-btn" %>
-        <%=link_to 'もどる', favorite_path(@favorite.user_id), class:"back-btn" %>
+        <%=link_to 'もどる', favorite_path(@favorite.id), class:"back-btn" %>
       </div>
       <%# /下部ボタン %>
     </div>
