--- a/app/views/wants/edit.html.erb
+++ b/app/views/wants/edit.html.erb
@@ -47,7 +47,7 @@ app/assets/stylesheets/items/new.css %>
  
       <div class="sell-btn-contents">
         <%= f.submit "変更する" ,class:"sell-btn" %>
-        <%=link_to 'もどる', want_path(@want.user_id), class:"back-btn" %>
+        <%=link_to 'もどる', want_path(@want.id), class:"back-btn" %>
       </div>
       <%# /下部ボタン %>
     </div>
