消耗品消費期間及び更新機能の実装

--- a/app/views/expendables/_expendable_day.html.erb
+++ b/app/views/expendables/_expendable_day.html.erb
@@ -4,13 +4,10 @@
         <ul class="more_list">
           <li>
             <p>
-            <%= "消費期限: #{expendable.updated_at.to_date + expendable.period}" %>
+            <%= "消費期限: #{expendable.registration_day.to_date + expendable.period}"  %>
             </p>
             <p>
-            <%= "残り日数: #{expendable.updated_at.day + expendable.period - Date.today.day}日" %>
-            </p>
-            <P>
-            <%= link_to '登録品の更新', "#", method: :get, class: "index_item-red-btn" %>
+            <%= "残り日数: #{expendable.registration_day.day + expendable.period - Date.today.day}日" %>
             </p>
             <%#= link_to '詳細', tweet_path(tweet.id), method: :get %>
           </li>
