--- a/app/views/expendables/index.html.erb
+++ b/app/views/expendables/index.html.erb
@@ -123,9 +123,7 @@
 
         <% end %>
         <div class="sell-btn-contents">
-        <%#= form_with model:favorite, url:favorite_path(favorite.id), method: :patch, local: true do |f| %>
         <%= link_to "更新する", "/favorites/#{favorite.id}/day_update", method: :put, class:"index_item-red-btn" %>
-        <%#end %>
         </div>
       </li>
        <% end %>
@@ -187,6 +185,9 @@
             </div>
           </div>%>
         <% end %>
+        <div class="sell-btn-contents">
+          <%= link_to "更新する", "/expendables/#{expendable.id}/day_update", method: :put, class:"index_item-red-btn" %>
+        </div>
       </li>
        <% end %>
 
