--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -42,7 +42,7 @@
         消費期間
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :period, class:"items-text", id:"item-name", placeholder:"20（必須 半角数字 40文字まで)", maxlength:"40" %>
+      <%= f.text_area :period, class:"items-text", id:"item-name", placeholder:"（必須 半角数字 例 20)", maxlength:"40" %>
     <%# /商品名と商品説明 %>
 
     <%# 下部ボタン %>
