--- a/app/views/expendables/_favorite_day.html.erb
+++ b/app/views/expendables/_favorite_day.html.erb
@@ -1,13 +1,13 @@
-    <div class="content_post" style="background-image: url(<%= favorite.image %>);">
+    <div class="content_post" style="background-image: url(<%= favorite["image"] %>);">
       <div class="more">
         <span><%#= image_tag '' %></span>
         <ul class="more_list">
           <li>
             <p>
-            <%= "消費期限: #{favorite.registration_day.to_date + favorite.period}" %>
+            <%= "消費期限: #{favorite["registration_day"].to_date + favorite["period"]}" %>
             </p>
             <p>
-            <%= "残り日数: #{favorite.registration_day.day + favorite.period - Date.today.day}日" %>
+            <%= "残り日数: #{favorite["registration_day"].day + favorite["period"] - Date.today.day}日" %>
             </p>
             <%#= link_to '詳細', tweet_path(tweet.id), method: :get %>
           </li>
