--- a/app/views/expendables/_expendable_day.html.erb
+++ b/app/views/expendables/_expendable_day.html.erb
@@ -1,13 +1,13 @@
-    <div class="content_post" style="background-image: url(<%= expendable.image %>);">
+    <div class="content_post" style="background-image: url(<%= expendable["image"] %>);">
       <div class="more">
         <span><%#= image_tag '' %></span>
         <ul class="more_list">
           <li>
             <p>
-            <%= "消費期限: #{expendable.registration_day.to_date + expendable.period}"  %>
+            <%= "消費期限: #{expendable["registration_day"].to_date + expendable["period"]}"  %>
             </p>
             <p>
-            <%= "残り日数: #{expendable.registration_day.day + expendable.period - Date.today.day}日" %>
+            <%= "残り日数: #{expendable["expiration"]}日" %>
             </p>
             <%#= link_to '詳細', tweet_path(tweet.id), method: :get %>
           </li>
