--- a/app/views/expendables/index.html.erb
+++ b/app/views/expendables/index.html.erb
@@ -49,7 +49,7 @@
            <%# @purchase_history.each do |purchase_history| %>
           <%# if item.id == purchase_history.item_id  %>
           <% else%>
-            <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
+            <%= image_tag "IMG_2970 2.jpeg", class: "item-img" %>
           <%#<div class='sold-out'>
             <span>Sold Out!!</span>
           </div>%>
@@ -91,7 +91,6 @@
     <ul class='item-lists'>
     <% if @favorite.present? %>
       <% @favorite.each do |favorite| %>
-      <%# binding.pry %>
 
       <li class='list'>
         <%= link_to favorite_path(favorite["id"]), method: :get do %>
@@ -169,7 +168,7 @@
            <%# @purchase_history.each do |purchase_history| %>
           <%# if item.id == purchase_history.item_id  %>
             <% else%>
-            <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
+            <%= image_tag "IMG_2970 2.jpeg", class: "item-img" %>
           <%#<div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
