--- a/app/views/wants/show.html.erb
+++ b/app/views/wants/show.html.erb
@@ -37,7 +37,7 @@
     <table class="detail-table">
       <tbody>
         <tr>
-          <th class="detail-item">理由</th>
+          <th class="detail-item">詳細</th>
           <td class="detail-value"><%= @want.content %></td>
         </tr>
       </tbody>
