--- a/app/assets/stylesheets/expendables/index.scss
+++ b/app/assets/stylesheets/expendables/index.scss
@@ -8,14 +8,11 @@ a {
 
 .title-contents {
   width: 100vw;
-  background-image: image-url('furima-header01.png');
+  height: 50vh;
+  background-image: image-url("panda2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
   padding: 5vh 15vw;
   color: #fff;
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
@@ -23,7 +20,26 @@ a {
 
 .service-title {
   font-size: 8vh;
+  color: green;
 }
+
+.purchase-box {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: white;
+}
+
+.purchase-btn {
+  padding: 10px;
+  margin: 10px;
+  border: solid 1px aquamarine;
+  border-radius: 10px;
+  color: gray;
+  background-color: aquamarine;
+}
+
 
 .store-btn {
   display: flex;
@@ -42,7 +58,6 @@ a {
 
 
 
-/* 商品一覧 */
 
 .item-contents {
   background-color: #FFF;
@@ -71,6 +86,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  list-style: none;
 }
 
 .item-lists>.list {
@@ -147,5 +163,3 @@ a {
   margin: 20px 0px;
   padding: 2vh 3vw;
 }
-
-/* //商品一覧 */
