--- a/app/views/expendables/index.html.erb
+++ b/app/views/expendables/index.html.erb
@@ -42,7 +42,7 @@
           <% if want.image.present? %>
           <%= image_tag want.image, class: "item-img" %>
           <% else%>
-          <%#= image_tag "img_29702.jpeg", class: "item-img" %>
+          <%= image_tag "https://1.bp.blogspot.com/-D2I7Z7-HLGU/Xlyf7OYUi8I/AAAAAAABXq4/jZ0035aDGiE5dP3WiYhlSqhhMgGy8p7zACNcBGAsYHQ/s1600/no_image_square.jpg", class: "item-img" %>
           <% end %>
         </div>
         <% end %>
@@ -127,7 +127,7 @@
             <%= image_tag expendable["image"], class: "item-img" %>
               <%= render partial: "expendable_day", locals: { expendable: expendable } %>
             <% else%>
-            <%#= image_tag "img_29702.jpeg", class: "item-img" %>
+            <%= image_tag "https://1.bp.blogspot.com/-D2I7Z7-HLGU/Xlyf7OYUi8I/AAAAAAABXq4/jZ0035aDGiE5dP3WiYhlSqhhMgGy8p7zACNcBGAsYHQ/s1600/no_image_square.jpg", class: "item-img" %>
             <% end %>
         </div>
         <% end %>
