--- a/app/views/expendables/index.html.erb
+++ b/app/views/expendables/index.html.erb
@@ -53,7 +53,7 @@
 
         <li class='list'>
           <%= link_to '#' do %>
-            <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
+            <%= image_tag "https://1.bp.blogspot.com/-D2I7Z7-HLGU/Xlyf7OYUi8I/AAAAAAABXq4/jZ0035aDGiE5dP3WiYhlSqhhMgGy8p7zACNcBGAsYHQ/s1600/no_image_square.jpg", class: "item-img" %>
                <div class='item-info'>
                     <h3 class='item-name'>
                         商品を登録してね!
@@ -94,7 +94,7 @@
 
         <li class='list'>
           <%= link_to '#' do %>
-            <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
+            <%= image_tag "https://1.bp.blogspot.com/-D2I7Z7-HLGU/Xlyf7OYUi8I/AAAAAAABXq4/jZ0035aDGiE5dP3WiYhlSqhhMgGy8p7zACNcBGAsYHQ/s1600/no_image_square.jpg", class: "item-img" %>
                <div class='item-info'>
                     <h3 class='item-name'>
                         商品を登録してね!
@@ -141,7 +141,7 @@
 
         <li class='list'>
           <%= link_to '#' do %>
-            <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
+            <%= image_tag "https://1.bp.blogspot.com/-D2I7Z7-HLGU/Xlyf7OYUi8I/AAAAAAABXq4/jZ0035aDGiE5dP3WiYhlSqhhMgGy8p7zACNcBGAsYHQ/s1600/no_image_square.jpg", class: "item-img" %>
                <div class='item-info'>
                     <h3 class='item-name'>
                         商品を登録してね!
